--- a/InventarioBackend.csproj
+++ b/InventarioBackend.csproj
@@ -36,8 +36,6 @@
     <Folder Include="src\Core\Application\Inventory\InventoryMovement\DTOs\" />
     <Folder Include="src\Core\Application\Inventory\InventoryMovement\Handlers\" />
     <Folder Include="src\Core\Application\Inventory\InventoryMovement\Specs\" />
-    <Folder Include="src\Core\Application\Menu\Interfaces\" />
-    <Folder Include="src\Core\Application\Menu\Services\" />
     <Folder Include="src\Core\Application\Sales\" />
     <Folder Include="src\Core\Application\Products\Category\DTOs\" />
     <Folder Include="src\Core\Application\Products\Category\Handlers\" />
@@ -62,6 +60,12 @@
 
   <ItemGroup>
     <None Include="InventarioBackend.sln" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
