--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,6 @@
     "Secret": "U7dq9d8qU8f4wErL25rD6y5YxZ2JH9yD7k8oV9e1Dq7L0E4G8c3fU!"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=InventarioDB;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=158.220.114.156;Initial Catalog=InvBD;Persist Security Info=True;User ID=Fisco;Password=Fisco2019+;MultipleActiveResultSets=True;TrustServerCertificate=True"
   }
 }
